tests/regression/errors/basic/undefined_var_5.csd
// Undefined variable test 5
vibez.spill("Using undefined:", undefined_var_5)
sus result drip = missing_variable + 5
